tests/ui/parser/float-field-interpolated.stderr
error: unexpected token: ``
  --> $DIR/float-field-interpolated.rs:8:13
   |
LL |         { s.$b; }
   |             ^^
...
LL |     generate_field_accesses!(1.1, 1.1, 1.1);
   |     --------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `generate_field_accesses` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected one of `.`, `;`, `?`, `}`, or an operator, found invisible open delimiter
  --> $DIR/float-field-interpolated.rs:8:13
   |
LL |         { s.$b; }
   |             ^^ expected one of `.`, `;`, `?`, `}`, or an operator
...
LL |     generate_field_accesses!(1.1, 1.1, 1.1);
   |     --------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `generate_field_accesses` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: ``
  --> $DIR/float-field-interpolated.rs:11:13
   |
LL |         { s.$c; }
   |             ^^
...
LL |     generate_field_accesses!(1.1, 1.1, 1.1);
   |     --------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `generate_field_accesses` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected one of `.`, `;`, `?`, `}`, or an operator, found invisible open delimiter
  --> $DIR/float-field-interpolated.rs:11:13
   |
LL |         { s.$c; }
   |             ^^ expected one of `.`, `;`, `?`, `}`, or an operator
...
LL |     generate_field_accesses!(1.1, 1.1, 1.1);
   |     --------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `generate_field_accesses` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

